fixed error env connection database

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 JWT_SECRET_KEY = my_secret_key
-MYSQL_DNS = user:password@tcp(db:3306)/testdb?charset=utf8mb4&parseTime=True&loc=Local
+MYSQL_DNS = user:password@tcp(db)/testdb?charset=utf8mb4&parseTime=True&loc=Local
